# site

./: .gitignore  README.md  nova.toml  pyproject.toml  requirements.txt
.github/workflows/: blue-check-colon-three.yml
src/: index.html  index.jinja2
src/backend/: __init__.py  __main__.py
src/backend/lib/logger/: logger.py
src/backend/routes/: errors.py  pages.py  resources.py  static.py
src/frontend/pages/: about.html  index.html  music.html
src/frontend/sass/: extras.scss  main.scss  variables.scss
src/frontend/sass/modules/: 404.scss  blog.scss  home.scss  layout.scss  links.scss  mobile.layout.scss  modal.scss  projects.scss  status.scss
src/frontend/static/: llms.txt  robots.txt
src/frontend/static/css/: extras.css  (+1 more)
src/frontend/templates/: 404.html  about.html  base.html  home.html  links.html  music.html  projects.html  status.html
src/frontend/ts/: badges.js  badges.ts  blog.ts  index.ts  musicFunctions.ts  pagination.ts  rain.ts  status.ts
src/pages/: about.html  index.html  links.html  music.html  projects.html  status.html
src/sass/: extras.scss  font-faces.scss  main.scss  main.scss.old  main2.scss  snow.scss  variables.scss
src/sass/modules/: home.scss  layout.scss  links.scss  mobile.layout.scss  music.scss  projects.scss  status.scss
src/static/: modernindex.html  nanobot.html  robots.txt
src/static/data/: songs.json
src/static/js/: index.js  rain.js
src/ts/: badges.js  badges.ts  home.ts  index.ts  infoTags.ts  marquee.ts  musicFunctions.ts  rain.ts  status.ts
tools/: export_music_challenge.py  fixer.py  songs.json
(+15 files in other folders)
