[project]
name = "domainroot2"
version = "0.1.0"
description = "pyxfluff.dev website"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esbuild>=0.1.2",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "libsass>=0.23.0",
    "orjson>=3.11.9",
    "pathlib>=1.0.1",
    "rich>=15.0.0",
    "uvicorn>=0.49.0",
]
