[project]
name = "domainroot2"
version = "0.1.0"
description = "pyxfluff.dev website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dart-sass>=0.5.2",
    "esbuild>=0.1.2",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.9",
    "pathlib>=1.0.1",
    "rich>=15.0.0",
    "uvicorn>=0.49.0",
]
